test/cases/compile_errors/import_by_absolte_path.zig
comptime {
    _ = @import("/usr/local/foo.zig");
}

// error
// backend=stage2
// target=native
//
// :2:17: error: import of file outside package path: '/usr/local/foo.zig'
